new structure db, new paths of REST API
