# minproj/Minapp/serializers.py
@@ -7,7 +7,7 @@ from django.contrib.auth import authenticate
 from rest_framework import serializers
 from rest_framework.authtoken.models import Token
 
-from .models import User
+from .models import User, Department  # Operator, Coordinator, Recipient
 
 
 class LoginSerializer(serializers.Serializer):
@@ -49,7 +49,8 @@ class LoginSerializer(serializers.Serializer):
         try:
             token = Token.objects.get(user=user)
 
-            if token.created.timestamp() < (datetime.datetime.now(tz=timezone.utc) - datetime.timedelta(days=30)).timestamp():
+            if token.created.timestamp() < (
+                    datetime.datetime.now(tz=timezone.utc) - datetime.timedelta(days=30)).timestamp():
                 # update the created time of the token to keep it valid
                 token.delete()
                 token = Token.objects.create(user=user)
@@ -60,10 +61,53 @@ class LoginSerializer(serializers.Serializer):
             token.created = datetime.datetime.now(tz=timezone.utc)
             token.save()
 
-                # Метод validate должен возвращать словарь проверенных данных. Это
+            # Метод validate должен возвращать словарь проверенных данных. Это
         # данные, которые передются в т.ч. в методы create и update.
         return {
             'username': user.username,
             'token': Token.objects.get(user=user).key,
             'staff': user.staff
         }
+
+
+class UserSerializer(serializers.ModelSerializer):
+    department_name = serializers.StringRelatedField(source='department_id.name')
+    password = serializers.CharField(max_length=128, min_length=8, write_only=True)
+    is_check = serializers.BooleanField(read_only=True)
+
+    class Meta:
+        model = User
+        # fields = '__all__'
+        exclude = ['is_superuser', 'groups', 'user_permissions']
+
+
+class CreateUserSerializer(serializers.ModelSerializer):  # только для Администраторов
+    password = serializers.CharField(max_length=128, min_length=8, write_only=True)
+    email = serializers.EmailField(allow_null=True)
+    middle_name = serializers.CharField(allow_null=True)
+    staff = serializers.CharField(required=True)
+
+    class Meta:
+        model = User
+        exclude = ['is_superuser', 'groups', 'user_permissions']
+
+    def create(self, validated_data):
+        return User.objects.create_user(**validated_data)
+
+
+class PatchUserAdminSerializer(serializers.ModelSerializer):
+    department_name = serializers.StringRelatedField(source='department_id.name')
+    password = serializers.CharField(max_length=128, min_length=8, write_only=True)
+
+    class Meta:
+        model = User
+        # fields = '__all__'
+        exclude = ['groups', 'user_permissions']
+
+
+class PatchRecipientCoordinatorSerializer(serializers.ModelSerializer):
+
+    class Meta:
+        model = User
+        fields = ['is_check']
+
